ColorLabs17/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\+libs\mediaComp.jar;C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17
-d
C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\bookClasses\Pixel.java
<---- end of javadoc command ---->
Loading source file C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\bookClasses\Pixel.java...
Constructing Javadoc information...
C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\bookClasses\Pixel.java:20: error: cannot access DigitalPicture
  private DigitalPicture picture;
          ^
  bad source file: C:\Users\awwang\Desktop\APCS\colorlabs21-AlexanderWang72839\ColorLabs17\bookClasses\DigitalPicture.java
    file does not contain class bookClasses.DigitalPicture
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
1 error
